# raytracer

./: Cargo.toml  README.md  image.ppm
src/: aabb.rs  bvh.rs  camera.rs  hit.rs  hit_list.rs  interval.rs  main.rs  material.rs  ray.rs  sphere.rs  util.rs  vec3.rs  vector.rs
