[package]
edition = "2021"
name = "raytracer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
glam = { version = "0.24.2", features = ["rand"] }
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
paste = "1.0.14"
rand = "0.8.5"
rayon = "1.8.0"
