[package]
edition = "2021"
name = "raytracer"
version = "0.1.0"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bevy = "0.12.1"
glam = {version = "0.24.2", features = ["rand"]}
indicatif = {version = "0.17.7", features = ["rayon"]}
itertools = "0.12.0"
paste = "1.0.14"
rand = "0.8.5"
rayon = "1.8.0"
